homepage banner text bottom spacing solved

--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@
 	display: none;
 }
 .banner .banner_text {
-	margin-top: 28%;
+	margin: 28% 0 8% 0;
 	padding: 0 10px;
 	padding-bottom: 10px;
 	font-family: 'Great Vibes', cursive;
